--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="#">Project 4</a>
             <a href="#">Project 5</a>
             <h2>Contato</h2>
-            <p>guilers06@email.com</p>
+            <p>guil3rs06@email.com</p>
         </div>
     </div>
 </body>
